--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 body{
@@ -8,6 +9,7 @@ body{
     width: 100vw;
     background: url('./../images/background.jpg')  no-repeat  center;
     background-size: cover;
+    font-size: 16px;
 }
 
 header{
@@ -102,6 +104,7 @@ input{
     border: none;
     padding: 10px;
     background: #eee;
+    
 }
 
 input:focus{
@@ -117,6 +120,7 @@ input:focus{
     padding-bottom:10px ;
     border-bottom: 1px solid #ccc;
 }
+
 .close-btn{
     height:15px;
     width:15px;
@@ -147,4 +151,28 @@ input:focus{
     font-weight: 700;
     margin-left: 5px;
     cursor: pointer;
+}
+
+.create-post{
+    width: 60%;
+    background-color: white;
+    padding: 20px;
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    z-index: 5;
+}
+
+form > textarea{
+    min-height: 360px;
+    max-height: 360px;
+    min-width: 100%;
+    max-width: 100%;
+    background: #eee;
+    border: none;
+}
+form > textarea:focus{
+    outline: none;
+    border: none;
 }
