--- a/css/post.css
+++ b/css/post.css
@@ -2,6 +2,7 @@
     width: auto;
     margin: 0 10px;
     padding: 10px;
+    box-sizing: border-box;
     
 }
 
@@ -10,21 +11,14 @@
     padding: 10px;
     margin: 10px;
     font-size: 18px;
+    border: 1px solid transparent;
 }
-#post-title-edit{
-    font-size: 16px;
 
-    width:95%;
-    padding: 10px;
-    margin: 10px auto;
-
-    border: 1px solid red;
-
-}
 .post-auth{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .user-response{
@@ -38,11 +32,7 @@
     width: 60%;
 }
 
-button{
-    width: fit-content;
-    background: red;
-    
-}
+
 
 .edit-post,.post-save{
     display: none;
@@ -57,6 +47,7 @@ button{
 }
 
 .post-btn{
+    width: fit-content;
     box-shadow: 0px 3px 6px rgb(255, 124, 124);
     background-color: red;
     transform:perspective(1px) scale(1);
@@ -66,4 +57,28 @@ button{
     box-shadow: 0px 5px 10px rgb(255, 124, 124);
     transform:perspective(1px) scale(1.03);
 
+}
+
+.post-description{
+    padding: 10px;
+    border: 1px solid transparent;
+}
+.comment-container{
+    margin-top: 15px;
+    background: #ccc;
+    padding: 10px;
+    width:60%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    display: none;
+}
+
+.comment-container>p{
+    background-color: white;
+    padding: 10px;
+}
+
+.edit{
+    border: 1px red solid;
 }
